--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
 <body>
   <header>
-    <div class="header-title">店内管理システム</div>
+    <div class="header-title">店内管理システム<br></div>
     <nav>
       <a href="#">ホーム</a>
       <a href="#">店内マップ</a>
