--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     header {
       background-color: #2c3e50; /* 藍色 */
+      
       color: white;
     }
 
@@ -154,7 +155,7 @@
 
 <body>
   <header>
-    <div class="header-title">店内管理システム<br></div>
+    <div class="header-title"><br>店内管理システム<br></div>
     <nav>
       <a href="#">ホーム</a>
       <a href="#">店内マップ</a>
