--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
 
 <body>
   <header>
-    <div class="header-title"><br>店内管理システム<br></div>
+    <div class="header-title">店内管理システム</div>
+    <br>
     <nav>
       <a href="#">ホーム</a>
       <a href="#">店内マップ</a>
