--- a/index.html
+++ b/index.html
@@ -189,10 +189,10 @@
 <body>
   <header>
     <div class="header-title">店内管理システム</div>
-    <div class="header-buttons">
-      <button onclick="alert('マニュアルを開きます')">マニュアル</button>
-      <button onclick="alert('ログアウトします')">ログアウト</button>
-    </div>
+    <nav>
+      <a href="#">マニュアル</a>
+      <a href="#">ログアウト</a>
+    </nav>
     <br>
     <nav>
      <a href="index.html" class="active">ホーム</a>
