--- a/index.html
+++ b/index.html
@@ -19,13 +19,6 @@
     color: white;
   }
 
-  .header-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-  }
-
   .header-title {
     font-size: 1.5em;
   }
@@ -33,6 +26,7 @@
    .header-links {
     display: flex;
     gap: 20px;
+    align-items: left;
     font-size: 0.95em;
   }
 
