--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
    .header-links {
     display: flex;
     gap: 20px;
-    align-items: left;
+    align-items: right;
     font-size: 0.95em;
   }
 
