--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
    .header-links {
     display: flex;
     gap: 20px;
-    align-items: right;
     font-size: 0.95em;
   }
 
@@ -178,10 +177,11 @@
 
 <body>
   <header>
-    <div class="header-title">店内管理システム</div>
+    <div class="header-title">店内管理システム
     <div class="header-links">
       <a href="#">マニュアル</a>
       <a href="#">ログアウト</a>
+    </div>
     </div>
     <br>
     <nav>
