--- a/index.html
+++ b/index.html
@@ -177,11 +177,10 @@
 
 <body>
   <header>
-    <div class="header-title">店内管理システム
+    <div class="header-title">店内管理システム</div>
     <div class="header-links">
-      <a href="#">マニュアル</a>
-      <a href="#">ログアウト</a>
-    </div>
+      <a href-right="#">マニュアル</a>
+      <a href-right="#">ログアウト</a>
     </div>
     <br>
     <nav>
