--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
    .header-links {
     display: flex;
+    text-align: right;
     gap: 20px;
     font-size: 0.95em;
   }
@@ -179,8 +180,8 @@
   <header>
     <div class="header-title">店内管理システム</div>
     <div class="header-links">
-      <a href-right="#">マニュアル</a>
-      <a href-right="#">ログアウト</a>
+      <a href="#">マニュアル</a>
+      <a href="#">ログアウト</a>
     </div>
     <br>
     <nav>
