--- a/index.html
+++ b/index.html
@@ -8,66 +8,71 @@
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
 
   <style>
-  body {
-    font-family: sans-serif;
-    margin: 0;
-    padding: 0;
-  }
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      padding: 0;
+    }
 
-  header {
-    background-color: #2c3e50; /* 藍色 */
-    color: white;
-  }
+    header {
+      background-color: #2c3e50;
+      color: white;
+    }
 
-  .header-title {
-    font-size: 1.5em;
-  }
+    .header-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 20px;
+    }
 
-   .header-links {
-    display: flex;
-    text-align: right;
-    gap: 20px;
-    font-size: 0.95em;
-  }
+    .header-title {
+      font-size: 1.5em;
+    }
 
-  .header-links a {
-    color: white;
-    text-decoration: none;
-  }
+    .header-links {
+      display: flex;
+      gap: 20px;
+    }
 
-  .header-links a:hover {
-    text-decoration: underline;
-  }
+    .header-links a {
+      color: white;
+      text-decoration: none;
+    }
 
-  nav {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    background-color: #3498db; /* 青色 */
-    text-align: center;
-    border-top: 1px solid #fff;
-    border-bottom: 1px solid #fff;
-  }
+    .header-links a:hover {
+      text-decoration: underline;
+    }
 
-  nav a {
-    padding: 12px 0;
-    display: block;
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-    border-right: 1px solid #fff;
-  }
+    nav {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      background-color: #3498db;
+      text-align: center;
+      border-top: 1px solid #fff;
+      border-bottom: 1px solid #fff;
+    }
 
-  nav a:last-child {
-    border-right: none;
-  }
+    nav a {
+      padding: 12px 0;
+      display: block;
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      border-right: 1px solid #fff;
+    }
 
-  nav a.active {
-    background-color: #1f618d; /* 現在選択中のタブ：濃い青 */
-  }
+    nav a:last-child {
+      border-right: none;
+    }
 
-  nav a:hover {
-    background-color: #2980b9;
-  }
+    nav a.active {
+      background-color: #1f618d;
+    }
+
+    nav a:hover {
+      background-color: #2980b9;
+    }
 </style>
 
   <script>
