--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
 
 <body>
   <header>
+    <div class="header-bar">
     <div class="header-title">店内管理システム</div>
     <div class="header-links">
       <a href="#">マニュアル</a>
