--- a/index.html
+++ b/index.html
@@ -184,10 +184,11 @@
 <body>
   <header>
     <div class="header-bar">
-    <div class="header-title">店内管理システム</div>
-    <div class="header-links">
-      <a href="#">マニュアル</a>
-      <a href="#">ログアウト</a>
+      <div class="header-title">店内管理システム</div>
+      <div class="header-links">
+        <a href="#">マニュアル</a>
+        <a href="#">ログアウト</a>
+      </div>
     </div>
    
     <nav>
