--- a/map.html
+++ b/map.html
@@ -118,7 +118,8 @@
       "3": { top: "30%", left: "80%" },
       "4": { top: "60%", left: "20%" },
       "5": { top: "60%", left: "50%" },
-      "6": { top: "60%", left: "80%" }
+      "6": { top: "60%", left: "80%" },
+      "7": { top: "60%", left: "50%" }
     };
 
     function updateMarkers() {
