--- a/enter.html
+++ b/enter.html
@@ -4,17 +4,80 @@
   <meta charset="UTF-8">
   <title>入店記録</title>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
   <style>
-    body {
-      margin: 0;
-      padding: 0;
+    /* ローダー全体 */
+    .loader {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      background-color: #fff;
+      z-index: 9999;
+      top: 0;
+      left: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+    }
+
+    .loader .txt {
+      font-size: 30px;
+      font-weight: bold;
+      color: rgb(30, 50, 93);
+      margin-top: 20px;
+      display: none;
+    }
+
+    .looping-rhombuses-spinner {
+      position: relative;
+      width: 80px;
+      height: 80px;
+      display: none;
+    }
+
+    .looping-rhombuses-spinner .rhombus {
+      width: 20px;
+      height: 20px;
+      background-color: #2c3e50;
+      transform: rotate(45deg);
+      position: absolute;
+      top: 30px;
+      left: 30px;
+      animation: rhombus-move 1.2s infinite ease-in-out;
+    }
+
+    .looping-rhombuses-spinner .rhombus:nth-child(2) {
+      animation-delay: 0.2s;
+    }
+
+    .looping-rhombuses-spinner .rhombus:nth-child(3) {
+      animation-delay: 0.4s;
+    }
+
+    @keyframes rhombus-move {
+      0% {
+        transform: rotate(45deg) translate(0, 0);
+      }
+      50% {
+        transform: rotate(45deg) translate(30px, 30px);
+      }
+      100% {
+        transform: rotate(45deg) translate(0, 0);
+      }
+    }
+
+    /* 入店メッセージ本体 */
+    .main-content {
+      display: none;
       height: 100vh;
       background: linear-gradient(to right, #a1c4fd, #c2e9fb);
       display: flex;
       justify-content: center;
       align-items: center;
       font-family: 'Helvetica Neue', sans-serif;
-      color: #333;
       text-align: center;
     }
 
@@ -39,72 +102,57 @@
       font-size: 18px;
     }
   </style>
-
-  <!-- Firebase SDK 読み込み -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import { getFirestore, collection, query, where, getDocs /*, addDoc*/ } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
-      authDomain: "qr-visitor-log.firebaseapp.com",
-      projectId: "qr-visitor-log",
-      storageBucket: "qr-visitor-log.appspot.com",
-      messagingSenderId: "304250341939",
-      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-
-    window.addEventListener("load", async () => {
-      const params = new URLSearchParams(window.location.search);
-      const table = params.get("table") || "unknown";
-      const timestamp = new Date().toISOString();
-      const device = navigator.userAgent;
-
-      try {
-        const logsRef = collection(db, "logs");
-        const q = query(logsRef, where("table", "==", table));
-        const snapshot = await getDocs(q);
-
-        let enterCount = 0;
-        let exitCount = 0;
-
-        snapshot.forEach(doc => {
-          const data = doc.data();
-          if (data.type === "enter") enterCount++;
-          if (data.type === "exit") exitCount++;
-        });
-
-        if (enterCount > exitCount) {
-          console.warn("このテーブルはすでに使用中です");
-          window.location.href = "already.html";
-          return;
-        }
-
-        // ✅ 本来ここで入店記録を保存
-        /*
-        await addDoc(logsRef, {
-          type: "enter",
-          table,
-          timestamp,
-          device
-        });
-        console.log("✅ 入店記録完了");
-        */
-
-      } catch (error) {
-        console.error("❌ 入店記録失敗:", error);
-      }
-    });
-  </script>
 </head>
 <body>
-  <div class="container">
-    <div class="icon">🛍️</div>
-    <h1>ご来店ありがとうございます！</h1>
-    <p>入店が記録されました。</p>
+
+  <!-- 🔄 ローダー -->
+  <div class="loader" id="loader03">
+    <div class="looping-rhombuses-spinner">
+      <div class="rhombus"></div>
+      <div class="rhombus"></div>
+      <div class="rhombus"></div>
+    </div>
+    <p class="txt">こんにちは！</p>
   </div>
+
+  <!-- ✅ 本文 -->
+  <div class="main-content" id="main-content">
+    <div class="container">
+      <div class="icon">🛍️</div>
+      <h1>ご来店ありがとうございます！</h1>
+      <p>入店が記録されました。</p>
+    </div>
+  </div>
+
+  <!-- jQuery スクリプト -->
+  <script>
+    $(function () {
+      function end_loader() {
+        $('#loader03').fadeOut(600, function () {
+          $('#main-content').fadeIn(600);
+        });
+      }
+
+      function show_load() {
+        $('#loader03 .looping-rhombuses-spinner').fadeIn(400);
+      }
+
+      function hide_load() {
+        $('#loader03 .looping-rhombuses-spinner').fadeOut(400);
+      }
+
+      function show_txt() {
+        $('#loader03 .txt').fadeIn(400);
+      }
+
+      $(window).on('load', function () {
+        setTimeout(show_load, 800);
+        setTimeout(hide_load, 3500);
+        setTimeout(show_txt, 4000);
+        setTimeout(end_loader, 5000);
+      });
+    });
+  </script>
+
 </body>
 </html>
