--- a/enter.html
+++ b/enter.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>入店記録</title>
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
   <style>
-    /* ローダー全体 */
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Helvetica Neue', sans-serif;
+      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
+      color: #333;
+    }
+
+    /* 🔄 ローダー画面 */
     .loader {
       position: fixed;
       width: 100%;
@@ -38,7 +45,7 @@
       display: none;
     }
 
-    .looping-rhombuses-spinner .rhombus {
+    .rhombus {
       width: 20px;
       height: 20px;
       background-color: #2c3e50;
@@ -49,35 +56,27 @@
       animation: rhombus-move 1.2s infinite ease-in-out;
     }
 
-    .looping-rhombuses-spinner .rhombus:nth-child(2) {
+    .rhombus:nth-child(2) {
       animation-delay: 0.2s;
     }
 
-    .looping-rhombuses-spinner .rhombus:nth-child(3) {
+    .rhombus:nth-child(3) {
       animation-delay: 0.4s;
     }
 
     @keyframes rhombus-move {
-      0% {
-        transform: rotate(45deg) translate(0, 0);
-      }
-      50% {
-        transform: rotate(45deg) translate(30px, 30px);
-      }
-      100% {
-        transform: rotate(45deg) translate(0, 0);
-      }
+      0%   { transform: rotate(45deg) translate(0, 0); }
+      50%  { transform: rotate(45deg) translate(30px, 30px); }
+      100% { transform: rotate(45deg) translate(0, 0); }
     }
 
-    /* 入店メッセージ本体 */
+    /* ✅ 本文表示 */
     .main-content {
       display: none;
       height: 100vh;
-      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
       display: flex;
       justify-content: center;
       align-items: center;
-      font-family: 'Helvetica Neue', sans-serif;
       text-align: center;
     }
 
@@ -105,7 +104,7 @@
 </head>
 <body>
 
-  <!-- 🔄 ローダー -->
+  <!-- 🔄 ローディング画面 -->
   <div class="loader" id="loader03">
     <div class="looping-rhombuses-spinner">
       <div class="rhombus"></div>
@@ -115,7 +114,7 @@
     <p class="txt">こんにちは！</p>
   </div>
 
-  <!-- ✅ 本文 -->
+  <!-- ✅ 本文エリア -->
   <div class="main-content" id="main-content">
     <div class="container">
       <div class="icon">🛍️</div>
@@ -124,33 +123,32 @@
     </div>
   </div>
 
-  <!-- jQuery スクリプト -->
+  <!-- jQuery制御 -->
   <script>
-    $(function () {
+    $(document).ready(function () {
+      function show_load() {
+        $('.looping-rhombuses-spinner').fadeIn(400);
+      }
+
+      function hide_load() {
+        $('.looping-rhombuses-spinner').fadeOut(400);
+      }
+
+      function show_txt() {
+        $('.txt').fadeIn(400);
+      }
+
       function end_loader() {
         $('#loader03').fadeOut(600, function () {
           $('#main-content').fadeIn(600);
         });
       }
 
-      function show_load() {
-        $('#loader03 .looping-rhombuses-spinner').fadeIn(400);
-      }
-
-      function hide_load() {
-        $('#loader03 .looping-rhombuses-spinner').fadeOut(400);
-      }
-
-      function show_txt() {
-        $('#loader03 .txt').fadeIn(400);
-      }
-
-      $(window).on('load', function () {
-        setTimeout(show_load, 800);
-        setTimeout(hide_load, 3500);
-        setTimeout(show_txt, 4000);
-        setTimeout(end_loader, 5000);
-      });
+      // タイマー制御
+      setTimeout(show_load, 500);
+      setTimeout(hide_load, 3000);
+      setTimeout(show_txt, 3500);
+      setTimeout(end_loader, 5000);
     });
   </script>
 
