--- a/enter.html
+++ b/enter.html
@@ -15,7 +15,7 @@
       color: #333;
     }
 
-    /* 🔄 ローダー画面 */
+    /* ローダー画面 */
     .loader {
       position: fixed;
       width: 100%;
@@ -31,11 +31,24 @@
     }
 
     .loader .txt {
-      font-size: 30px;
+      font-size: 32px;
       font-weight: bold;
       color: rgb(30, 50, 93);
       margin-top: 20px;
       display: none;
+      animation: fade-slide 1s ease-out;
+    }
+
+    /* 店員アイコン */
+    .clerk {
+      font-size: 48px;
+      display: none;
+      animation: bow 1.5s ease-in-out infinite alternate;
+    }
+
+    @keyframes bow {
+      0%   { transform: rotate(0deg); }
+      100% { transform: rotateX(25deg); }
     }
 
     .looping-rhombuses-spinner {
@@ -56,13 +69,8 @@
       animation: rhombus-move 1.2s infinite ease-in-out;
     }
 
-    .rhombus:nth-child(2) {
-      animation-delay: 0.2s;
-    }
-
-    .rhombus:nth-child(3) {
-      animation-delay: 0.4s;
-    }
+    .rhombus:nth-child(2) { animation-delay: 0.2s; }
+    .rhombus:nth-child(3) { animation-delay: 0.4s; }
 
     @keyframes rhombus-move {
       0%   { transform: rotate(45deg) translate(0, 0); }
@@ -70,7 +78,6 @@
       100% { transform: rotate(45deg) translate(0, 0); }
     }
 
-    /* ✅ 本文表示 */
     .main-content {
       display: none;
       height: 100vh;
@@ -85,11 +92,13 @@
       padding: 40px;
       border-radius: 20px;
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+      animation: fade-zoom-in 0.8s ease-in-out;
     }
 
     .icon {
       font-size: 64px;
       margin-bottom: 20px;
+      animation: bounce 1.5s infinite ease-in-out;
     }
 
     h1 {
@@ -100,21 +109,44 @@
     p {
       font-size: 18px;
     }
+
+    /* 追加アニメーション */
+    @keyframes fade-slide {
+      0% { opacity: 0; transform: translateY(20px); }
+      100% { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes bounce {
+      0%, 100% { transform: translateY(0); }
+      50%      { transform: translateY(-10px); }
+    }
+
+    @keyframes fade-zoom-in {
+      from {
+        opacity: 0;
+        transform: scale(0.9);
+      }
+      to {
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
   </style>
 </head>
 <body>
 
-  <!-- 🔄 ローディング画面 -->
+  <!-- 🔄 ローダー -->
   <div class="loader" id="loader03">
     <div class="looping-rhombuses-spinner">
       <div class="rhombus"></div>
       <div class="rhombus"></div>
       <div class="rhombus"></div>
     </div>
-    <p class="txt">こんにちは！</p>
+    <div class="clerk" id="clerk">🙇‍♀️</div>
+    <p class="txt">いらっしゃいませ！</p>
   </div>
 
-  <!-- ✅ 本文エリア -->
+  <!-- ✅ 本体 -->
   <div class="main-content" id="main-content">
     <div class="container">
       <div class="icon">🛍️</div>
@@ -123,7 +155,7 @@
     </div>
   </div>
 
-  <!-- jQuery制御 -->
+  <!-- jQuery 制御 -->
   <script>
     $(document).ready(function () {
       function show_load() {
@@ -136,6 +168,7 @@
 
       function show_txt() {
         $('.txt').fadeIn(400);
+        $('#clerk').fadeIn(400);
       }
 
       function end_loader() {
@@ -144,7 +177,6 @@
         });
       }
 
-      // タイマー制御
       setTimeout(show_load, 500);
       setTimeout(hide_load, 3000);
       setTimeout(show_txt, 3500);
