--- a/enter.html
+++ b/enter.html
@@ -15,22 +15,35 @@
       color: #333;
     }
 
-    /* 🔄 ローダー画面 */
-    .loader {
+    /* 🔄 ローディング画面 */
+    .loader, .welcome-stage, .main-content {
       position: fixed;
       width: 100%;
       height: 100%;
-      background-color: #fff;
-      z-index: 9999;
       top: 0;
       left: 0;
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
+      background-color: #fff;
     }
 
-    /* 猫風ローディングバー */
+    .loader {
+      z-index: 3;
+    }
+
+    .welcome-stage {
+      z-index: 2;
+      display: none;
+    }
+
+    .main-content {
+      z-index: 1;
+      display: none;
+    }
+
+    /* ローディングバー */
     .loading-wrapper {
       position: relative;
       width: 220px;
@@ -60,25 +73,23 @@
     .loading-text {
       position: absolute;
       top: -24px;
-      right: 0;
+      left: 0;
       font-size: 14px;
       color: #555;
     }
 
     /* welcome画像 */
     .welcome-img {
-      display: none;
-      width: 100px;
+      width: 140px;
       height: auto;
       margin-bottom: 10px;
       animation: fade-slide 1s ease-in-out;
     }
 
-    .loader .txt {
-      font-size: 28px;
+    .welcome-text {
+      font-size: 32px;
       font-weight: bold;
       color: #2c3e50;
-      display: none;
       animation: fade-slide 1s ease-in-out;
     }
 
@@ -88,21 +99,13 @@
     }
 
     /* ✅ 本文表示 */
-    .main-content {
-      display: none;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-    }
-
     .container {
       background-color: rgba(255, 255, 255, 0.85);
       padding: 40px;
       border-radius: 20px;
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
       animation: fade-zoom-in 0.8s ease-in-out;
+      text-align: center;
     }
 
     .icon {
@@ -139,20 +142,24 @@
 </head>
 <body>
 
-  <!-- 🔄 ローディング画面 -->
-  <div class="loader" id="loader03">
+  <!-- 🔄 ステージ①：ローディング -->
+  <div class="loader" id="loader">
     <div class="loading-wrapper">
       <div class="loading-text" id="loadingLabel">Now Loading...</div>
       <div class="loading-bar">
         <div class="loading-fill"></div>
       </div>
     </div>
-    <img src="welcome.png" alt="店員" class="welcome-img" id="welcomeImg" />
-    <p class="txt">いらっしゃいませ！</p>
   </div>
 
-  <!-- ✅ 本体 -->
-  <div class="main-content" id="main-content">
+  <!-- 🙇 ステージ②：いらっしゃいませ -->
+  <div class="welcome-stage" id="welcomeStage">
+    <img src="welcome.png" alt="店員" class="welcome-img" />
+    <p class="welcome-text">いらっしゃいませ！</p>
+  </div>
+
+  <!-- 🛍️ ステージ③：本体 -->
+  <div class="main-content" id="mainContent">
     <div class="container">
       <div class="icon">🛍️</div>
       <h1>ご来店ありがとうございます！</h1>
@@ -160,28 +167,27 @@
     </div>
   </div>
 
-  <!-- jQuery 制御 -->
+  <!-- 🧠 制御 -->
   <script>
     $(document).ready(function () {
-      function showWelcome() {
-        $('#welcomeImg').fadeIn(600);
-        $('.txt').fadeIn(600);
-      }
+      // バー満タンで Completion に変更
+      setTimeout(() => {
+        $('#loadingLabel').text('Completion!');
+      }, 3100);
 
-      function updateLoadingLabel() {
-        $('#loadingLabel').text("Completion!");
-      }
-
-      function end_loader() {
-        $('#loader03').fadeOut(600, function () {
-          $('#main-content').fadeIn(600);
+      // ローディング非表示 → いらっしゃいませ画面へ
+      setTimeout(() => {
+        $('#loader').fadeOut(600, () => {
+          $('#welcomeStage').fadeIn(800);
         });
-      }
+      }, 3500);
 
-      // 処理の流れ
-      setTimeout(updateLoadingLabel, 3100);  // バー終了後に文字切り替え
-      setTimeout(showWelcome, 3500);        // 少し後に画像とテキスト表示
-      setTimeout(end_loader, 5500);         // 全体非表示→本体へ
+      // いらっしゃいませ非表示 → 本文へ
+      setTimeout(() => {
+        $('#welcomeStage').fadeOut(600, () => {
+          $('#mainContent').fadeIn(800);
+        });
+      }, 6000);
     });
   </script>
 
