--- a/enter.html
+++ b/enter.html
@@ -15,7 +15,7 @@
       color: #333;
     }
 
-    /* ローダー画面 */
+    /* 🔄 ローダー画面 */
     .loader {
       position: fixed;
       width: 100%;
@@ -30,54 +30,64 @@
       flex-direction: column;
     }
 
-    .loader .txt {
-      font-size: 82px;
-      font-weight: bold;
-      color: rgb(30, 50, 93);
-      margin-top: 20px;
-      display: none;
-      animation: fade-slide 1s ease-out;
-    }
-
-    /* 店員アイコン */
-    .clerk {
-      font-size: 48px;
-      display: none;
-      animation: bow 1.5s ease-in-out infinite alternate;
-    }
-
-    @keyframes bow {
-      0%   { transform: rotate(0deg); }
-      100% { transform: rotateX(25deg); }
-    }
-
-    .looping-rhombuses-spinner {
+    /* 猫風ローディングバー */
+    .loading-wrapper {
       position: relative;
-      width: 80px;
-      height: 80px;
-      display: none;
+      width: 220px;
+      margin-bottom: 20px;
     }
 
-    .rhombus {
-      width: 20px;
+    .loading-bar {
+      width: 100%;
       height: 20px;
-      background-color: #2c3e50;
-      transform: rotate(45deg);
+      border: 2px solid #999;
+      border-radius: 10px;
+      overflow: hidden;
+    }
+
+    .loading-fill {
+      height: 100%;
+      width: 0%;
+      background-color: #7baaf7;
+      animation: loading-animation 3s forwards;
+    }
+
+    @keyframes loading-animation {
+      0% { width: 0%; }
+      100% { width: 100%; }
+    }
+
+    .loading-text {
       position: absolute;
-      top: 30px;
-      left: 30px;
-      animation: rhombus-move 1.2s infinite ease-in-out;
+      top: -24px;
+      right: 0;
+      font-size: 14px;
+      color: #555;
     }
 
-    .rhombus:nth-child(2) { animation-delay: 0.2s; }
-    .rhombus:nth-child(3) { animation-delay: 0.4s; }
-
-    @keyframes rhombus-move {
-      0%   { transform: rotate(45deg) translate(0, 0); }
-      50%  { transform: rotate(45deg) translate(30px, 30px); }
-      100% { transform: rotate(45deg) translate(0, 0); }
+    /* welcome画像 */
+    .welcome-img {
+      display: none;
+      width: 100px;
+      height: auto;
+      margin-bottom: 10px;
+      animation: fade-slide 1s ease-in-out;
     }
 
+    .loader .txt {
+      font-size: 28px;
+      font-weight: bold;
+      color: #2c3e50;
+      display: none;
+      animation: fade-slide 1s ease-in-out;
+    }
+
+    @keyframes fade-slide {
+      0% { opacity: 0; transform: translateY(20px); }
+      100% { opacity: 1; transform: translateY(0); }
+    }
+
+    /* ✅ 本文表示 */
     .main-content {
       display: none;
       height: 100vh;
@@ -110,17 +120,6 @@
       font-size: 18px;
     }
 
-    /* 追加アニメーション */
-    @keyframes fade-slide {
-      0% { opacity: 0; transform: translateY(20px); }
-      100% { opacity: 1; transform: translateY(0); }
-    }
-
-    @keyframes bounce {
-      0%, 100% { transform: translateY(0); }
-      50%      { transform: translateY(-10px); }
-    }
-
     @keyframes fade-zoom-in {
       from {
         opacity: 0;
@@ -131,18 +130,24 @@
         transform: scale(1);
       }
     }
+
+    @keyframes bounce {
+      0%, 100% { transform: translateY(0); }
+      50%      { transform: translateY(-10px); }
+    }
   </style>
 </head>
 <body>
 
-  <!-- 🔄 ローダー -->
+  <!-- 🔄 ローディング画面 -->
   <div class="loader" id="loader03">
-    <div class="looping-rhombuses-spinner">
-      <div class="rhombus"></div>
-      <div class="rhombus"></div>
-      <div class="rhombus"></div>
+    <div class="loading-wrapper">
+      <div class="loading-text" id="loadingLabel">Now Loading...</div>
+      <div class="loading-bar">
+        <div class="loading-fill"></div>
+      </div>
     </div>
-    <div class="clerk" id="clerk">🙇‍♀️</div>
+    <img src="welcome.png" alt="店員" class="welcome-img" id="welcomeImg" />
     <p class="txt">いらっしゃいませ！</p>
   </div>
 
@@ -158,17 +163,13 @@
   <!-- jQuery 制御 -->
   <script>
     $(document).ready(function () {
-      function show_load() {
-        $('.looping-rhombuses-spinner').fadeIn(400);
+      function showWelcome() {
+        $('#welcomeImg').fadeIn(600);
+        $('.txt').fadeIn(600);
       }
 
-      function hide_load() {
-        $('.looping-rhombuses-spinner').fadeOut(400);
-      }
-
-      function show_txt() {
-        $('.txt').fadeIn(400);
-        $('#clerk').fadeIn(400);
+      function updateLoadingLabel() {
+        $('#loadingLabel').text("Completion!");
       }
 
       function end_loader() {
@@ -177,10 +178,10 @@
         });
       }
 
-      setTimeout(show_load, 500);
-      setTimeout(hide_load, 3000);
-      setTimeout(show_txt, 3500);
-      setTimeout(end_loader, 5000);
+      // 処理の流れ
+      setTimeout(updateLoadingLabel, 3100);  // バー終了後に文字切り替え
+      setTimeout(showWelcome, 3500);        // 少し後に画像とテキスト表示
+      setTimeout(end_loader, 5500);         // 全体非表示→本体へ
     });
   </script>
 
