--- a/enter.html
+++ b/enter.html
@@ -149,6 +149,7 @@
     </div>
     <img src="welcome.png" alt="店員" class="welcome-img" id="welcomeImg" />
     <p class="txt" id="welcomeText">いらっしゃいませ！</p>
+    <p class="txt" id="welcomeText">welcome！</p>
   </div>
 
   <!-- ✅ 本体 -->
