--- a/enter.html
+++ b/enter.html
@@ -148,8 +148,7 @@
       </div>
     </div>
     <img src="welcome.png" alt="店員" class="welcome-img" id="welcomeImg" />
-    <p class="txt" id="welcomeText">いらっしゃいませ！</p>
-    <p>入店が記録されました。</p>
+    <p class="txt" id="welcomeText">いらっしゃいませ！<br>Welcome!</p>
   </div>
 
   <!-- ✅ 本体 -->
