--- a/enter.html
+++ b/enter.html
@@ -157,6 +157,7 @@
       <div class="icon">🛍️</div>
       <h1>ご来店ありがとうございます！</h1>
       <p>入店が記録されました。</p>
+      <p>入店が記録されました。2</p>
     </div>
   </div>
 
