--- a/enter.html
+++ b/enter.html
@@ -157,7 +157,8 @@
       <div class="icon">🛍️</div>
       <h1>ご来店ありがとうございます！</h1>
       <p>入店が記録されました。</p>
-      <p>入店が記録されました。2</p>
+      <p>Thank you for visiting our store!</p>
+      <p>Your entry has been recorded.</p>
     </div>
   </div>
 
