--- a/enter.html
+++ b/enter.html
@@ -148,7 +148,8 @@
       </div>
     </div>
     <img src="welcome.png" alt="店員" class="welcome-img" id="welcomeImg" />
-    <p class="txt" id="welcomeText">いらっしゃいませ！<br>   Welcome!</p>
+    <p class="txt" id="welcomeText">いらっしゃいませ！</p>
+    <p>Thank you for visiting our store!</p>
   </div>
 
   <!-- ✅ 本体 -->
