--- a/enter.html
+++ b/enter.html
@@ -149,7 +149,7 @@
     </div>
     <img src="welcome.png" alt="店員" class="welcome-img" id="welcomeImg" />
     <p class="txt" id="welcomeText">いらっしゃいませ！</p>
-    <p>Thank you for visiting our store!</p>
+    <p class="txt" id="welcomeText">Welcome!</p>
   </div>
 
   <!-- ✅ 本体 -->
